# ti-final-lab-revision

./: CMakeLists.txt  ProjectConfig.h.in  README.md  main.c  main.h
solutions/lab3z1/: CMakeLists.txt  Lab3_z1.c  Lab3_z1.h
solutions/lab3z1a/: CMakeLists.txt  Lab3_z1a.c  Lab3_z1a.h
solutions/lab3z1b/: CMakeLists.txt  Lab3_z1b.c  Lab3_z1b.h
solutions/lab3z2/: CMakeLists.txt  Lab3_z2.c  Lab3_z2.h
solutions/lab3z3/: CMakeLists.txt  Lab3_z3.c  Lab3_z3.h
solutions/lab3z4/: CMakeLists.txt  Lab3_z4.c  Lab3_z4.h  Lab3_z5.c  Lab3_z5.h
solutions/lab3z5/: CMakeLists.txt  Lab3_z2.c  Lab3_z5.c
solutions/lab4z1/: CMakeLists.txt  Lab4_z1.c  Lab4_z1.h
solutions/lab4z2/: CMakeLists.txt  Lab4_z2.c  Lab4_z2.h
solutions/lab4z3/: CMakeLists.txt  Lab4_z3.c  Lab4_z3.h
solutions/lab4z4/: CMakeLists.txt  Lab4_z4.c  Lab4_z4.h
test_data/: lab3z1_dane.txt  lab3z2_dane.txt  lab3z3_dane.txt  lab4z1_dane.txt
